syntax = "proto3";

package socialite;

service Socialites {
    // 小程序获取授权
    rpc Auth(Request) returns (Response) {}
    // 授权网址
    rpc AuthURL(Request) returns (Response) {}
    rpc Handle(Request) returns (Response) {}
}


message Socialite {
    string driver = 1;
    string code = 2;
    string state = 3;
    string callback = 4;
}

message Request {
    Socialite socialite = 1;
}

message User {
    string id = 1;
    string name = 2;
    string token = 3;
}

message Response {
    repeated User users = 1;
    bool valid = 2;
    string url = 3;
}