syntax = "proto3";

package user;

service Users {
    // 获取用户绑定账号列表
    rpc Get(Request) returns (Response) {}
    // 删除绑定用户
    rpc Delete(Request) returns (Response) {}
    // 微服务之间调用
}

message User {
    string id = 1;
    string name = 2;
    string socialite_id = 3;
}

message SocialiteUser {
    string id = 1;
    string oauth_id = 2;
    string origin = 3;
    repeated User users = 4;
    string created_at = 5;
    string updated_at = 6;
}

message Request {
    SocialiteUser socialiteUser = 1;
}

message Response {
    User user = 1;
    repeated User users = 2;
    int64 total = 3;
    bool valid = 4;
}